# moondream-app

./: .gitignore  README.md  render.yaml
client/: pubspec.yaml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: home_screen.dart  main.dart
client/macos/Runner/: Info.plist
client/macos/Runner.xcodeproj/: project.pbxproj
server/: .env  agent.py  pyproject.toml  server.py
